--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -73,6 +73,7 @@ jobs:
       uses: hashicorp/setup-terraform@v1
       with:
         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+        
 
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
@@ -90,4 +91,7 @@ jobs:
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
     - name: Terraform Apply
       if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'
-      run: terraform apply -auto-approve -input=false
+      run: |
+         aws configure set aws_access_key_id ${{ secrets.ACCESS_KEY_ID_AWS }} --profile default
+         aws configure set aws_secret_access_key ${{ secrets.SECRET_ACCESS_KEY_AWS }} --profile default
+         terraform apply -auto-approve -input=false
