--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -88,7 +88,7 @@ jobs:
 
     # Generates an execution plan for Terraform
     - name: Terraform Plan
-      run: terraform plan -input=false
+      run: terraform plan -lock=false
 
       # On push to "main", build or change infrastructure according to Terraform configuration files
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
@@ -97,4 +97,4 @@ jobs:
       run: |
          aws configure set aws_access_key_id ${{ secrets.ACCESS_KEY_ID_AWS }} --profile default
          aws configure set aws_secret_access_key ${{ secrets.SECRET_ACCESS_KEY_AWS }} --profile default
-         terraform apply -auto-approve -input=false
+         terraform apply -auto-approve -lock=false
