--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -80,7 +80,7 @@ jobs:
       run: |
         aws configure set aws_access_key_id ${{ secrets.ACCESS_KEY_ID_AWS }} --profile default
         aws configure set aws_secret_access_key ${{ secrets.SECRET_ACCESS_KEY_AWS }} --profile default
-        terraform init
+        terraform init -reconfigure -lock=false
 
     # Checks that all Terraform configuration files adhere to a canonical format
    # - name: Terraform Format
