--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -55,7 +55,7 @@ permissions:
 jobs:
   terraform:
     name: 'Terraform'
-    runs-on: runner2
+    runs-on: runner2-tf
     environment: production
 
     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
